my-test/testsuite_scan/ir/SingleSource/Regression/C/gcc-c-torture/execute/pr24135.ll.err
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/pr24135.c:11:5: error: function definition is not allowed here
   11 |     {
      |     ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/pr24135.c:20:3: error: call to undeclared function 'y'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
   20 |   y (b);
      |   ^
2 errors generated.
